# pwhl-elo

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  index.html  move_data.sh  pwhl_final_elos.json  upcoming_projection.py
app/: bar.csv  foo.csv  pwhl.config  pyproject.toml  update.sh
assets/: index-10NUQNUb.js  index-1varN5zm.js  index-7nrdE5FH.js  index-7wXu-5bt.js  index-9YvqtdvU.js  index-AFANVNBN.js  index-B0E4DI0_.js  index-B0nP8bDt.js  index-B30Janck.js  index-B5s3ZIen.js  index-B6EIe-2v.js  index-B6v5jamm.js  index-B7BiICxi.js  index-B7lnJAX_.js  index-B95k3VNU.js  index-B9iM2YY_.js  index-BBo9eqUD.js  index-BIjQDD4o.js  index-BJTm85da.js  index-BKbpKI6F.css  index-BLb3opwF.js  index-BMLZYgel.js  index-BNcmCRfo.js  index-BOKz7_eb.js  index-BOzIt2e7.css  index-BRB5PVfj.js  index-BS3zCD3E.js  index-BVSCoeot.js  index-BVdDU_EY.js  index-BWP5EEaf.js  index-BXEpzNhW.js  index-BXXJJABb.js  index-BZ5ZbuJP.js  index-BZkm7qr0.js  index-BbVwQ-9w.js  index-BdjqX1Fd.js  index-Be6uoKiW.js  index-BeTajMiA.js  index-Bgy754Rx.js  index-Bi83sFYP.js  (+110 more)
process_data/: calculate_elo.py  upcoming_projection.py
pwhl-elo-frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
pwhl_elo/: README.md  foo.py  pyproject.toml  update-data.sh
pwhl_elo/src/: chart_elos.py  upcoming_projection.py
pwhl_elo/src/pwhl_elo/: __main__.py  calculate_elo.py  chart_data.py  chart_elos.py  clean_seasons.py  cli.py  get_games.py  get_season.py  revert_elo.py  upcoming_projection.py  update_elo.py  utils.py
pwhl_elo/test/unit/: test_elo.py
(+43 files in other folders)
